--- a/SeniorProject/Base.lproj/Main.storyboard
+++ b/SeniorProject/Base.lproj/Main.storyboard
@@ -977,6 +977,14 @@
                                 <rect key="frame" x="44" y="72" width="38" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sLY-9F-7iw">
+                                <rect key="frame" x="220" y="110" width="57" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Sharing"/>
+                                <connections>
+                                    <action selector="sharing:" destination="mmw-Tt-4mw" eventType="touchUpInside" id="49Y-eN-UTi"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
@@ -1001,7 +1009,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2fJ-lU-zRB" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1782" y="2023"/>
+            <point key="canvasLocation" x="1781.5999999999999" y="2022.6386806596704"/>
         </scene>
         <!--Order History Table View Controller-->
         <scene sceneID="jVq-uX-MEC">
